--- a/assets/scss/assets/_footer.scss
+++ b/assets/scss/assets/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	padding: 1rem;
+	padding: var(--space-s);
 	min-height: 25.875rem;
 	background-image: url('../images/contact-bg-mobile.webp');
 	background-repeat: no-repeat;
