--- a/assets/scss/assets/_steps.scss
+++ b/assets/scss/assets/_steps.scss
@@ -52,10 +52,12 @@
 	@media (min-width: 1000px) {
 		grid-template-columns: repeat(3, 8rem);
 		gap: 5rem;
+		margin-right: 2rem;
 	}
 
 	@media (min-width: 1400px) {
 		gap: 8rem;
 		grid-template-columns: repeat(3, 10rem);
+		margin-right: 4rem;
 	}
 }
