--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -25,4 +25,6 @@ body {
 	background-color: var(--color-neutral-100);
 	color: var(--color-neutral-900);
 	overflow-x: hidden;
+	max-width: 1440px;
+	margin: 0 auto;
 }
