--- a/assets/scss/assets/_chatbots.scss
+++ b/assets/scss/assets/_chatbots.scss
@@ -101,6 +101,7 @@
 			background-color: var(--color-neutral-900);
 			display: grid;
 			place-content: center;
+			position: relative;
 
 			@media (min-width: 760px) {
 				margin-bottom: 2rem;
